# s3-event

./: LICENSE  README.md  s3-event.cabal  stack.yaml
examples/: HappyFace.json
src/Network/AWS/S3/: NotificationEvent.hs
test/Network/AWS/S3/: NotificationEventTest.hs
