name:                  s3-event
version:               0.1.0.0
synopsis:              Deserializer for S3 notification events
homepage:              https://github.com/whittle/s3-event#readme
license:               BSD3
license-file:          LICENSE
author:                Jason Whittle
maintainer:            jason.whittle@gmail.com
copyright:             Copyright (c) 2017 Jason A. Whittle
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >=1.10
description:
  .
  http://docs.aws.amazon.com/AmazonS3/latest/dev/notification-content-structure.html

extra-source-files:    LICENSE
                     , README.md
                     , stack.yaml

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-extensions:    OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11
                     , amazonka-s3 >= 1.4
                     , classy-prelude >= 0.12
                     , hex >= 0.1
                     , lens
  hs-source-dirs:      src
  exposed-modules:     Network.AWS.S3.NotificationEvent

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  other-extensions:    NoImplicitPrelude
                     , OverloadedStrings
  hs-source-dirs:      test
  build-depends:       base
                     , s3-event
                     , aeson
                     , amazonka-s3
                     , classy-prelude
                     , tasty-discover
                     , time
  main-is:             tasty.hs
  other-modules:       Network.AWS.S3.NotificationEventTest

source-repository head
  type:                git
  location:            https://github.com/whittle/s3-event
